apps/nginx/overlays/prod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crucs-prod
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/crucs`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: crucs-prod-strip-prefix
